--- a/src/components/questionList/questionList.css
+++ b/src/components/questionList/questionList.css
@@ -1,12 +1,12 @@
 
 /* Left pane */
 
-.leftPaneCont{
+.question_list_container{
     position: sticky;
     top: 0;
 }
 
-.leftPane{
+.question_list{
     padding: 20px 30px 0;
     height: 100vh;
     overflow-y: auto;
@@ -15,65 +15,65 @@
     position: relative;
 }
 
-.leftPane::-webkit-scrollbar{
+.question_list::-webkit-scrollbar{
     width: 5px;
 }
 
 /* Track */
-.leftPane::-webkit-scrollbar-track {
+.question_list::-webkit-scrollbar-track {
     background: #f1f1f1; 
 }
    
 /* Handle */
-.leftPane::-webkit-scrollbar-thumb {
+.question_list::-webkit-scrollbar-thumb {
     background: rgb(167, 167, 167); 
     border-radius: 10px;
 }
   
 /* Handle on hover */
-.leftPane::-webkit-scrollbar-thumb:hover {
+.question_list::-webkit-scrollbar-thumb:hover {
     background: rgb(129, 129, 129); 
 }
 
-.questionList{
+.question_ul{
     list-style: none;
     margin: 0;
 }
 
-.questionList .active .questionText{
+.question_ul .active .question_text{
     font-weight: 700;
 }
 
-.questionList li{
+.question_ul li{
     display: flex;
 }
 
-input.delCheckbox{
+input.delete_checkbox{
     transform: scale(1.4);
     margin: 22px 16px 0 5px;
     display: none;
 }
 
-.questionList.showDelete .delCheckbox{
+.question_ul.show_delete .delete_checkbox{
     display: inline-block;
 }
 
-.questionText{
+.question_text{
     font-size: 19px;
-    outline: none !important;
+    outline: none;
     padding: 16px 0;
     font-weight: 500;
-    background-color: transparent !important;
+    background-color: transparent;
     box-shadow: none;
     font-family: 'Open Sans', sans-serif;
-    border: 0 !important;
+    border: 0 ;
     text-align: left;
     line-break: anywhere;
     line-height: 24px;
     width: 100%;
 } 
 
-.leftPaneFooter{
+.question_list_footer{
     position: sticky;
     bottom: 0;
     box-sizing: border-box;
@@ -84,6 +84,6 @@ input.delCheckbox{
     z-index: 9;
 }
 
-.leftPaneBody{
+.question_list_body{
     padding: 10px 0 20px;
 }
